fixed navbar alignments

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,24 +1,18 @@
 .main {
+	width: 100%;
 	text-align: center;
-	padding: 167px 15px 0px 0px;
+	padding: 185px 11px 0px 0px;
 }
 
-.navbar {
-	-webkit-appearance: none;
-	position: absolute;
-	float: right;
-	height: 15px;
-	font-size: 12px;
-	position: relative;
-	top: 20%;
-	transform: translateY(-20%);
-
+body {
+	overflow-x: hidden;
 }
 
-ul {
+nav ul {
+	margin: 0px;
+	padding: 0px;
     list-style-type: none;
-    margin: 0;
-    padding: 0;
+    vertical-align: middle;
 }
 
 li {
@@ -26,29 +20,74 @@ li {
 	padding: 10px;
 }
 
-.navbar a {
+/*top nav bar */
+nav#top {
+	float: right;
 	height: 40px;
-	width: 40px;
+	padding-bottom: 5px;
+	border: 5px solid transparent;
+	margin-top: 5px;
+}
 
+nav#top a {
 	color: #2a2a2a;
+	vertical-align: top;
+}
 
-	position: relative;
-	top: 50%;
-	transform: translateY(-50%);
+nav#top li {
+	vertical-align: top;
+}
+
+nav#top img {
+	height: 20px;
+}
+
+nav#top img#beemo{
+	height: 40px;
+	width:40px;
+	margin-top: -15px;
+}
+
+#beemo {
+	height: 32px;
+	width: 32px;
+	margin: -1px;
+	vertical-align: middle;
 }
 
 #share {
 	height: 40px;
 	width: 40px;
-	padding: 10px;
+	padding: 7px 12px 7px 12px;
 	background-color: #f1f1f1;
 }
 
-.footer a {
-	color: #696969;
 
+/*bottom nav bar*/
+nav#bottom {
+	height: 25px;
+	margin-left: -10px;
+	width: 99%;
+	clear: both;
+	position: absolute;
+	background-color:#f1f1f1;
+	font-size: 13.5px;
+	bottom: 1px;
+	border: 1px solid #e9e9e9;
+	padding: 1em 1em 0.2em 1em;
+}
+
+nav#bottom a {
+	color: #696969;
 	position: relative;
-	top: 30%;
+}
+
+span#left {
+	float: left;
+}
+
+span#right {
+	float: right;
 }
 
 a {
@@ -59,34 +98,22 @@ a:hover {
 	text-decoration: underline;
 }
 
-.footer {
-	height: 35px;
-	background-color:#f1f1f1;
-	position: absolute;
-	display: inline;
-	margin: auto;
-	font-size: 13.5px;
-	bottom: 1px;
-	border: 1px solid #e9e9e9;
-}
-
-#right {
-	margin-left: 62em;
-}
-
 .icon img {
-	height: 85px;
-	width: 242px;
+	height: 6em;
+	width: 17em;
 }
+
+
+/* input */
 
 input[type="text"] {
 	background-image: url(http://i.gyazo.com/cd5453d8d107fa55fda8b273138d6db0.png);
 	background-size: 18px 20px;
 	background-repeat: no-repeat;
-	background-position: 490px;
+	background-position: 40.5em;
 	margin: 17px 0px 16px 0px;
-	width: 505px;
-	height: 20px;
+	width: 42em;
+	height: 1.7em;
 	border: 1px solid #d3d3d3;
 	padding: 2px;
 }
@@ -101,23 +128,39 @@ input[type="text"]:focus {
 
 input[type="submit"] {
 	margin-right: 10px;
-	width: 85px;
-	height: 25px;
+	width: 10em;
+	height: 2.5em;
 	border: 1px solid #d3d3d3;
 	background-color: #f1f1f1;
-	font-size: 10px;
+	font-size: 11px;
 	font-family: Arial;
 	font-weight: bold;
 	color: #3f3f3f;
 }
 
+input[type="submit"]:hover {
+	border: 1px solid #a8a8a8;
+}
+
+input[type="submit"]:focus {
+	padding: 2px;
+}
+
 button {
-	width: 110px;
-	height: 25px;
+	width: 10em;
+	height: 2.5em;
 	border: 1px solid #d3d3d3;
 	background-color: #f1f1f1;
-	font-size: 10px;
+	font-size: 11px;
 	font-family: Arial;
 	font-weight: bold;
 	color: #3f3f3f;
+}
+
+button:hover {
+	border: 1px solid #a8a8a8;
+}
+
+button:focus {
+	padding: 2px;
 }
